--- a/grid_search.ipynb
+++ b/grid_search.ipynb
@@ -35,7 +35,7 @@
         "id": "D3x14CwtxcV5"
       },
       "source": [
-        "sdimport numpy as np\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd"
       ],
